--- a/numeros1.html
+++ b/numeros1.html
@@ -1,4 +1,4 @@
-<h2 class="wp-block-heading has-text-align-center has-xxx-large-font-size counter" data-count="177" style="font-style:normal;font-weight:100">0</h2>
+<h2 class="wp-block-heading has-text-align-center has-xxx-large-font-size counter" data-count="177" style="font-style:normal;font-size: 50px; color: whitefont-weight:100">0</h2>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
@@ -29,5 +29,3 @@ $(window).scroll(function() {
 });
 </script>
 
-</body>
-</html>
